# coolio

./: .gitignore  Cargo.toml  README.md
config/: docker-compose-storage.yml  migrations.sql  settings.toml
src/: builder.rs  error.rs  main.rs  models.rs  parser.rs  settings.rs  spotify.rs
src/service/: history.rs  io.rs  mod.rs  playlists.rs  spotify.rs
src/service/history/: mod.rs
src/storage/: fs.rs  mock.rs  mod.rs  models.rs  psql.rs  storage.rs
src/tests/: history.rs  mock_spotify.rs  mock_storage.rs  mod.rs  parser.rs  playlists.rs
