[package]
edition = "2021"
name = "coolio"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
chrono = "0.4.19"
clap = {version = "3.0.10", features = ["derive", "cargo"]}
config = "0.11"
env_logger = {version = "0.9.0", default-features = false}
rspotify = {version = "0.11.3", features = ["cli", "client-reqwest"]}
serde = "1.0.134"
tokio = {version = "1.11.0", features = ["rt-multi-thread", "macros"]}
tokio-postgres = {version = "0.7.5", features = ["with-chrono-0_4"]}
csv = "1.1.6"
enum_dispatch = "0.3.7"